cecil (0.4.1-1) unstable; urgency=low

  * New upstream version
  * Renamed libmono-cecil0.3-cil to libmono-cecil0.4-cil to reflect API	changes
  * Updated the paths to conform with the latest version of the CLI policy
  * Updated debian/copyright

 -- Sebastian Dröge <slomo@ubuntu.com>  Wed,  5 Apr 2006 17:01:17 +0200

cecil (0.3-1) unstable; urgency=low

  * Initial Revision (Closes: #357829)

 -- Debian Mono Group <pkg-mono-group@lists.alioth.debian.org>  Sun, 19 Mar 2006 20:20:41 +0100
